fix(tab): behave exactly as jump links

--- a/src/css/modules/tabs.css
+++ b/src/css/modules/tabs.css
@@ -28,3 +28,7 @@
 .js .panel {
   display: none;
 }
+
+.js .panel:focus {
+  outline: 0;
+}
